api/cors.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: waittime-api
spec:
  headers:
    accessControlAllowOriginList:
      - https://michaelswebstuff.com
    accessControlAllowMethods:
      - GET
    accessControlMaxAge: 600
