api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waittime-api-ingress
  namespace: waittime-api
  annotations:
    # these nginx annotations don't do anything
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "https://waittimewizard.info"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "GET"

spec:
  ingressClassName: traefik
  rules:
    - host: waittimes.michaelswebstuff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: waittime-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - waittimes.michaelswebstuff.com
      secretName: waittime-wizard-tls
